--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.redislabs</groupId>
 	<artifactId>spark-redis</artifactId>
-	<version>0.3.2</version>
+	<version>1.0.0</version>
 	<name>Spark-Redis</name>
 	<description>A Spark library for Redis</description>
 	<url>http://github.com/RedisLabs/spark-redis</url>
@@ -11,11 +11,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 		<scala.minor.version>2.10</scala.minor.version>
 		<scala.complete.version>${scala.minor.version}.4</scala.complete.version>
-		<jedis.version>2.7.2</jedis.version>
-		<spark.version>1.4.1</spark.version>
+		<jedis.version>2.9.0</jedis.version>
+		<spark.version>1.6.0-cdh5.7.2</spark.version>
 	</properties>
 
 	<build>
@@ -236,4 +236,21 @@
 			<scope>test</scope>
 		</dependency>
     </dependencies>
+
+	<distributionManagement>
+		<site>
+			<id>website</id>
+			<url>scp://webhost.company.com/www/website</url>
+		</site>
+		<repository>
+			<id>releases</id>
+			<name>JP Releases</name>
+			<url>http://maven.66buy.com.cn:8081/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>JP Snapshots</name>
+			<url>http://maven.66buy.com.cn:8081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
